# livegraphs-django

./: .editorconfig  .env.sample  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .uv  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PRETTIER_SETUP.md  PROJECT_OVERVIEW.md  Procfile  QUICK_START_GUIDE.md  README.md  TODO.md  __init__.py  dev.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  start.sh
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: bandit.yml  codacy.yml
.scripts/: lint.sh  test.sh
dashboard_project/: __main__.py  asgi.py  manage.py
dashboard_project/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dashboard_project/accounts/migrations/: 0001_initial.py
dashboard_project/dashboard/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py  views_export.py
dashboard_project/dashboard/management/: __init__.py
dashboard_project/dashboard/management/commands/: __init__.py  create_sample_data.py  create_test_data.py  sync_external_data.py
dashboard_project/dashboard/migrations/: 0001_initial.py  0002_datasource_external_source_alter_datasource_file.py  0003_alter_chatsession_unique_together.py
dashboard_project/dashboard/templatetags/: __init__.py  dashboard_extras.py
dashboard_project/dashboard_project/: celery.py  settings.py  urls.py  wsgi.py
dashboard_project/data_integration/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
dashboard_project/data_integration/management/commands/: create_default_datasource.py  fetch_chat_data.py  fix_datasource_schema.py  test_celery.py  test_datasource_schema.py  test_html_sanitizer.py  test_redis.py
dashboard_project/data_integration/migrations/: 0001_initial.py  0002_externaldatasource_error_count_and_more.py
dashboard_project/scripts/: cleanup_duplicates.py  fix_dashboard_data.py
dashboard_project/static/css/: dashboard.css  style.css
dashboard_project/static/js/: ajax-navigation.js  ajax-pagination.js  dashboard.js  main.js
dashboard_project/templates/: base.html
dashboard_project/templates/accounts/: login.html  password_change.html  password_change_done.html  profile.html  register.html
dashboard_project/templates/dashboard/: chat_session_detail.html  dashboard.html  dashboard_confirm_delete.html  dashboard_form.html  data_source_confirm_delete.html  data_source_detail.html  data_view.html  no_company.html  search_results.html  upload.html
dashboard_project/templates/dashboard/partials/: data_table.html  search_results_table.html
docs/: CELERY_REDIS.md  TROUBLESHOOTING.md
nginx/conf.d/: default.conf
