[project]
name = "livegraphsdjango"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.4",
    "django>=5.2.1",
    "django-allauth>=65.8.0",
    "django-crispy-forms>=2.4",
    "gunicorn>=23.0.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "python-dotenv>=1.1.0",
    "whitenoise>=6.9.0",
]

[project.scripts]
# Django management commands
"manage" = "dashboard_project.manage:main"
"runserver" = "dashboard_project.manage:main"
"migrate" = "dashboard_project.manage:main"
"makemigrations" = "dashboard_project.manage:main"
"collectstatic" = "dashboard_project.manage:main"
"createsuperuser" = "dashboard_project.manage:main"
"shell" = "dashboard_project.manage:main"
"test" = "dashboard_project.manage:main"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
